@@ -30,6 +30,7 @@ em 1 \033X\147
 hy 1 -
 \- 1 -
 rs 1 %\134
+dq 1 %\042
 bu 1 \033X\127
 sq 1 \033X\115
 ru 1 \033X\147
