@@ -64,4 +64,4 @@ ps !< !> as os tf bc ld rd pp ra an =. 4d =:
 le ge el eg LE GE EL EG <> ><
 RC TR RB CB Sl
 \' \`
-xe xh xk cs vs ob rs
+xe xh xk cs vs ob rs dq
