@@ -34,12 +34,13 @@ internalname 1
 special
 charset
 "	41	2	34
+dq	"
 #	50	2	35
 <	56	0	60
 >	56	0	62
 @	92	3	64
 \	28	2	92
-rs	28	2	92
+rs	"
 or	20	2	124
 ^	33	2	195
 ~	33	2	196
