@@ -58,6 +58,8 @@ Release ...
   PostScript DSC input files.
 * nroff: The ".psbb" request has been made a no-op since nroff cannot
   otherwise handle EPS documents anyway.
+* [nt]roff: The "\(dq" character has been introduced as an alternate name
+  for the ASCII double quote character.
 * tbl: When ending macros in generated code, ".00" is now used instead
   of "..". This allows the use of ".ig" and similar requests within "T{"
   etc. without interference.
